Fixed the width of logo on mobile

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -99,6 +99,7 @@
 
   @media only screen and (max-width: $handy-width) {
     .logo {
+      max-width: 80%;
       font-size: 4em;
     }
 
